--- a/src/Limitless/KarhabtiBundle/Resources/views/Offre/affiche.html.twig
+++ b/src/Limitless/KarhabtiBundle/Resources/views/Offre/affiche.html.twig
@@ -2,7 +2,7 @@
 {% block title %}
     {{ parent() }}
 {% endblock %}
-{% block body%}
+{% block body %}
     {% set counter = 0 %}
     <!-- Header 1
  ============================================ -->
@@ -13,12 +13,14 @@
                     <!-- Header Bottom -->
                     <div class="col-xs-12">
                         <div class="navbar-header">
-                            <a href="{{ path('limitless_karhabti_homepage') }}" class="logo navbar-brand"><img id="logo_img" src="{{ asset('bundles/limitlesskarhabti/img/logo/color-1.png')}}" alt="logo" /></a>
+                            <a href="{{ path('limitless_karhabti_homepage') }}" class="logo navbar-brand"><img
+                                        id="logo_img"
+                                        src="{{ asset('bundles/limitlesskarhabti/img/logo/color-1.png') }}" alt="logo"/></a>
                         </div>
                         <div class="main-menu menu-style-6 mean-menu float-right">
                             <nav>
                                 <ul>
-                                    <li ><a href="{{ path('limitless_karhabti_homepage') }}">home</a></li>
+                                    <li><a href="{{ path('limitless_karhabti_homepage') }}">home</a></li>
                                     <li><a href="#">Profil</a></li>
                                     <li class="active"><a href="#">Offre/Pack<i class="icofont icofont-simple-down"></i></a>
                                         <ul>
@@ -26,7 +28,7 @@
                                             <li><a href="{{ path('responsable_pack_index') }}">Pack</a></li>
                                         </ul>
                                     </li>
-                                    <li ><a href="{{ path('responsable_vehicule_index') }}">Vehicule</a></li>
+                                    <li><a href="{{ path('responsable_vehicule_index') }}">Vehicule</a></li>
                                     <li><a href="#">Moniteur</a></li>
                                     <li><a href="{{ path('reponsable_tache_index') }}">Planning</a></li>
                                     <li><a href="#">Cour/Examen<i class="icofont icofont-simple-down"></i></a>
@@ -83,147 +85,166 @@
                         width: auto;
                         line-height: 30px;
                     }
+
                     table a:link {
                         color: #666;
                         font-weight: bold;
-                        text-decoration:none;
+                        text-decoration: none;
                     }
+
                     table a:visited {
                         color: #999999;
-                        font-weight:bold;
-                        text-decoration:none;
+                        font-weight: bold;
+                        text-decoration: none;
                     }
+
                     table a:active,
                     table a:hover {
                         color: #bd5a35;
-                        text-decoration:underline;
+                        text-decoration: underline;
                     }
+
                     table {
-                        font-family:Arial, Helvetica, sans-serif;
-                        color:#666;
-                        font-size:12px;
+                        font-family: Arial, Helvetica, sans-serif;
+                        color: #666;
+                        font-size: 12px;
                         text-shadow: 1px 1px 0px #fff;
-                        background:#eaebec;
+                        background: #eaebec;
                         margin-left: auto;
                         margin-right: auto;
                         margin-top: 20px;
                         width: auto;
-                        border:#ccc 1px solid;
+                        border: #ccc 1px solid;
 
-                        -moz-border-radius:3px;
-                        -webkit-border-radius:3px;
-                        border-radius:3px;
+                        -moz-border-radius: 3px;
+                        -webkit-border-radius: 3px;
+                        border-radius: 3px;
 
                         -moz-box-shadow: 0 1px 2px #d1d1d1;
                         -webkit-box-shadow: 0 1px 2px #d1d1d1;
                         box-shadow: 0 1px 2px #d1d1d1;
                     }
+
                     table th {
-                        padding:21px 25px 22px 25px;
-                        border-top:1px solid #fafafa;
-                        border-bottom:1px solid #e0e0e0;
+                        padding: 21px 25px 22px 25px;
+                        border-top: 1px solid #fafafa;
+                        border-bottom: 1px solid #e0e0e0;
                         text-align: center;
 
                         background: #ededed;
                         background: -webkit-gradient(linear, left top, left bottom, from(#ededed), to(#ebebeb));
-                        background: -moz-linear-gradient(top,  #ededed,  #ebebeb);
+                        background: -moz-linear-gradient(top, #ededed, #ebebeb);
                     }
-                    table th:first-child{
+
+                    table th:first-child {
                         text-align: center;
-                        padding-left:20px;
+                        padding-left: 20px;
                     }
-                    table tr:first-child th:first-child{
-                        -moz-border-radius-topleft:3px;
-                        -webkit-border-top-left-radius:3px;
-                        border-top-left-radius:3px;
+
+                    table tr:first-child th:first-child {
+                        -moz-border-radius-topleft: 3px;
+                        -webkit-border-top-left-radius: 3px;
+                        border-top-left-radius: 3px;
                     }
-                    table tr:first-child th:last-child{
-                        -moz-border-radius-topright:3px;
-                        -webkit-border-top-right-radius:3px;
-                        border-top-right-radius:3px;
+
+                    table tr:first-child th:last-child {
+                        -moz-border-radius-topright: 3px;
+                        -webkit-border-top-right-radius: 3px;
+                        border-top-right-radius: 3px;
                     }
-                    table tr{
+
+                    table tr {
                         text-align: center;
-                        padding-left:20px;
+                        padding-left: 20px;
                     }
-                    table tr td:first-child{
+
+                    table tr td:first-child {
                         text-align: left;
-                        padding-left:20px;
+                        padding-left: 20px;
                         border-left: 0;
                     }
+
                     table tr td {
-                        padding:18px;
+                        padding: 18px;
                         border-top: 1px solid #ffffff;
-                        border-bottom:1px solid #e0e0e0;
+                        border-bottom: 1px solid #e0e0e0;
                         border-left: 1px solid #e0e0e0;
 
                         background: #fafafa;
                         background: -webkit-gradient(linear, left top, left bottom, from(#fbfbfb), to(#fafafa));
-                        background: -moz-linear-gradient(top,  #fbfbfb,  #fafafa);
+                        background: -moz-linear-gradient(top, #fbfbfb, #fafafa);
                     }
-                    table tr.even td{
+
+                    table tr.even td {
                         background: #f6f6f6;
                         background: -webkit-gradient(linear, left top, left bottom, from(#f8f8f8), to(#f6f6f6));
-                        background: -moz-linear-gradient(top,  #f8f8f8,  #f6f6f6);
+                        background: -moz-linear-gradient(top, #f8f8f8, #f6f6f6);
                     }
-                    table tr:last-child td{
-                        border-bottom:0;
+
+                    table tr:last-child td {
+                        border-bottom: 0;
                     }
-                    table tr:last-child td:first-child{
-                        -moz-border-radius-bottomleft:3px;
-                        -webkit-border-bottom-left-radius:3px;
-                        border-bottom-left-radius:3px;
+
+                    table tr:last-child td:first-child {
+                        -moz-border-radius-bottomleft: 3px;
+                        -webkit-border-bottom-left-radius: 3px;
+                        border-bottom-left-radius: 3px;
                     }
-                    table tr:last-child td:last-child{
-                        -moz-border-radius-bottomright:3px;
-                        -webkit-border-bottom-right-radius:3px;
-                        border-bottom-right-radius:3px;
+
+                    table tr:last-child td:last-child {
+                        -moz-border-radius-bottomright: 3px;
+                        -webkit-border-bottom-right-radius: 3px;
+                        border-bottom-right-radius: 3px;
                     }
-                    table tr:hover td{
+
+                    table tr:hover td {
                         background: #f2f2f2;
                         background: -webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#f0f0f0));
-                        background: -moz-linear-gradient(top,  #f2f2f2,  #f0f0f0);
+                        background: -moz-linear-gradient(top, #f2f2f2, #f0f0f0);
                     }
 
                 </style>
 
                 <ul>
                     <li style="text-align: center">
-                        <button><a  class="btn color "  href="{{ path('responsable_offre_new') }}">Ajouter une nouvelle Offre</a></button>
+                        <button><a class="btn color " href="{{ path('responsable_offre_new') }}">Ajouter une nouvelle
+                                Offre</a></button>
                     </li>
                 </ul>
                 <form method="POST" style="padding-bottom: 2%;padding-top: 2%;padding-left: 1.7%">
-                    <h3>Rechercher : <input  placeholder="Prix Unitaire Code" type="text" name="prixu">
-                        <input  type="submit" value="Recherche"></h3>
+                    <h3>Rechercher : <input placeholder="Prix Unitaire Code" type="text" name="prixu">
+                        <input type="submit" value="Recherche"></h3>
                 </form>
-                    {% for modele in modeles %}
+                {% for modele in modeles %}
 
-{% set counter =counter + 1 %}
-                            <div id="offre">
+                    {% set counter =counter + 1 %}
+                    <div id="offre">
 
-                                    <div class="col-md-4" >
-                                        <div class="thumbnail" align="center" style="background-color: #f9ecec">
-                                            <img src="{{ asset('bundles/limitlesskarhabti/images/offre/offre.png') }}">
-                                            <h1 style="color: #efe24b"><a style="text-transform: uppercase;" href="{{ path('responsable_offre_show', { 'id': modele.id }) }}"> <b>{{ modele.nom }}</b></a><br></h1>
-                                            <label>Prix unitaire code : </label>{{ modele.prixUcode }} <br>
-                                            <label>Prix unitaire conduite : </label> {{ modele.prixUconduite }} <br>
-                                           <label>Description : </label> {{ modele.description }}<br>
-                                          <label>Nom de moniteur : </label> {{ modele.moniteur }}<br>
-                                        <label>Modele de vehicule : </label> {{ modele.vehicule }}<br> <br>
-                                            <button style="margin-bottom: 2%;margin-top: 2%" >
-
-
-                                                <a class="btn color " href="{{ path('responsable_offre_show',{'id':modele.id}) }}">Voir l'offre en details</a>
-                                            </button>
+                        <div class="col-md-4">
+                            <div class="thumbnail" align="center" style="background-color: #f9ecec">
+                                <img src="{{ asset('bundles/limitlesskarhabti/images/offre/offre.png') }}">
+                                <h1 style="color: #efe24b"><a style="text-transform: uppercase;"
+                                                              href="{{ path('responsable_offre_show', { 'id': modele.id }) }}">
+                                        <b>{{ modele.nom }}</b></a><br></h1>
+                                <label>Prix unitaire code : </label>{{ modele.prixUcode }} <br>
+                                <label>Prix unitaire conduite : </label> {{ modele.prixUconduite }} <br>
+                                <label>Description : </label> {{ modele.description }}<br>
+                                <label>Nom de moniteur : </label> {{ modele.moniteur }}<br>
+                                <label>Modele de vehicule : </label> {{ modele.vehicule }}<br> <br>
+                                <button style="margin-bottom: 2%;margin-top: 2%">
 
 
+                                    <a class="btn color " href="{{ path('responsable_offre_show',{'id':modele.id}) }}">Voir
+                                        l'offre en details</a>
+                                </button>
 
-                                        </div>
-                                    </div>
-                                </div>
+
+                            </div>
+                        </div>
+                    </div>
 
 
-                    {% endfor %}
+                {% endfor %}
 
             </div>
 
