--- a/src/Limitless/KarhabtiBundle/Resources/views/Offre/show.html.twig
+++ b/src/Limitless/KarhabtiBundle/Resources/views/Offre/show.html.twig
@@ -2,7 +2,7 @@
 {% block title %}
     {{ parent() }}
 {% endblock %}
-{% block body%}
+{% block body %}
     <!-- Header 1
  ============================================ -->
     <div class="header-area header-absolute header-transparent">
@@ -12,12 +12,14 @@
                     <!-- Header Bottom -->
                     <div class="col-xs-12">
                         <div class="navbar-header">
-                            <a href="{{ path('limitless_karhabti_homepage') }}" class="logo navbar-brand"><img id="logo_img" src="{{ asset('bundles/limitlesskarhabti/img/logo/color-1.png')}}" alt="logo" /></a>
+                            <a href="{{ path('limitless_karhabti_homepage') }}" class="logo navbar-brand"><img
+                                        id="logo_img"
+                                        src="{{ asset('bundles/limitlesskarhabti/img/logo/color-1.png') }}" alt="logo"/></a>
                         </div>
                         <div class="main-menu menu-style-6 mean-menu float-right">
                             <nav>
                                 <ul>
-                                    <li ><a href="{{ path('limitless_karhabti_homepage') }}">home</a></li>
+                                    <li><a href="{{ path('limitless_karhabti_homepage') }}">home</a></li>
                                     <li><a href="#">Profil</a></li>
                                     <li class="active"><a href="#">Offre/Pack<i class="icofont icofont-simple-down"></i></a>
                                         <ul>
@@ -25,7 +27,7 @@
                                             <li><a href="{{ path('responsable_offre_index') }}">Pack</a></li>
                                         </ul>
                                     </li>
-                                    <li ><a href="{{ path('responsable_vehicule_index') }}">Vehicule</a></li>
+                                    <li><a href="{{ path('responsable_vehicule_index') }}">Vehicule</a></li>
                                     <li><a href="#">Moniteur</a></li>
                                     <li><a href="{{ path('reponsable_tache_index') }}">Planning</a></li>
                                     <li><a href="#">Cour/Examen<i class="icofont icofont-simple-down"></i></a>
@@ -89,14 +91,20 @@
                         <h4 class="blog-title">{{ offre.nom }}</h4>
                         <div class="blog-meta fix">
                             <p class="float-right">
-                                <button><a class="btn color" href="{{ path('responsable_offre_edit', { 'id': offre.id }) }}">Modifier</a></button>
-                                <button><a class="btn color" href="{{ path('responsable_offre_delete',{id:offre.id}) }}">Supprimer</a></button>
+                                <button><a class="btn color"
+                                           href="{{ path('responsable_offre_edit', { 'id': offre.id }) }}">Modifier</a>
+                                </button>
+                                <button><a class="btn color"
+                                           href="{{ path('responsable_offre_delete',{id:offre.id}) }}">Supprimer</a>
+                                </button>
                             </p>
                         </div>
                         <div class="blog-description">
-                            <p><small>Cet offre a un prix unitaire code {{ offre.prixUcode }} dt <b>&</b> un prix unitaire conduite {{ offre.prixUconduite }} dt. <br>
-                                    <br></small></p>
-                            </blockquote>
+                            <p>
+                                <small>Cet offre a un prix unitaire code {{ offre.prixUcode }} dt <b>&</b> un prix
+                                    unitaire conduite {{ offre.prixUconduite }} dt. <br>
+                                    <br></small>
+                            </p>
                             <p>nom de moniteur </p>
                             <blockquote>
                                 <ul>
@@ -111,7 +119,9 @@
                             </blockquote>
 
 
-                                <p class="float-right"><td>{{ socialButtons()}}</td></p>
+                            <p class="float-right">
+                            <td>{{ socialButtons() }}</td>
+                            </p>
 
                         </div>
                     </div>
@@ -122,10 +132,12 @@
                     <div class="blog-image">
                         <ul>
                             <li style="text-align: left">
-                                <button><a class="btn color" href="{{ path('responsable_offre_index',{id:offre.id}) }}">Retour a la liste</a></button>
+                                <button><a class="btn color" href="{{ path('responsable_offre_index',{id:offre.id}) }}">Retour
+                                        a la liste</a></button>
                             </li>
                         </ul>
-                        <img style="padding-top: 9%;" src="{{ asset('bundles/limitlesskarhabti/images/offre/offre.png') }}" alt="" />
+                        <img style="padding-top: 9%;"
+                             src="{{ asset('bundles/limitlesskarhabti/images/offre/offre.png') }}" alt=""/>
                     </div>
 
                 </div>
