--- a/src/Limitless/KarhabtiBundle/Resources/views/agence/index.html.twig
+++ b/src/Limitless/KarhabtiBundle/Resources/views/agence/index.html.twig
@@ -2,7 +2,7 @@
 {% block title %}
     {{ parent() }}
 {% endblock %}
-{% block body%}
+{% block body %}
 
     <!-- Header 1
  ============================================ -->
@@ -13,12 +13,14 @@
                     <!-- Header Bottom -->
                     <div class="col-xs-12">
                         <div class="navbar-header">
-                            <a href="{{ path('limitless_karhabti_homepage') }}" class="logo navbar-brand"><img id="logo_img" src="{{ asset('bundles/limitlesskarhabti/img/logo/color-1.png')}}" alt="logo" /></a>
+                            <a href="{{ path('limitless_karhabti_homepage') }}" class="logo navbar-brand"><img
+                                        id="logo_img"
+                                        src="{{ asset('bundles/limitlesskarhabti/img/logo/color-1.png') }}" alt="logo"/></a>
                         </div>
                         <div class="main-menu menu-style-6 mean-menu float-right">
                             <nav>
                                 <ul>
-                                    <li ><a href="{{ path('limitless_karhabti_homepage') }}">home</a></li>
+                                    <li><a href="{{ path('limitless_karhabti_homepage') }}">home</a></li>
                                     <li><a href="#">Profil</a></li>
                                     <li><a href="#">Offre/Pack<i class="icofont icofont-simple-down"></i></a>
                                         <ul>
@@ -26,7 +28,8 @@
                                             <li><a href="{{ path('responsable_pack_index') }}">Pack</a></li>
                                         </ul>
                                     </li>
-                                    <li class="active"><a href="{{ path('responsable_vehicule_index') }}">Vehicule</a></li>
+                                    <li class="active"><a href="{{ path('responsable_vehicule_index') }}">Vehicule</a>
+                                    </li>
                                     <li><a href="#">Moniteur</a></li>
                                     <li><a href="{{ path('reponsable_tache_index') }}">Planning</a></li>
                                     <li><a href="#">Cour/Examen<i class="icofont icofont-simple-down"></i></a>
@@ -87,40 +90,89 @@
 
                 <ul>
                     <li style="text-align: center">
-                        <button><a  class="btn color "  href="{{ path('agence_new') }}">créer une nouvelle agence</a></button>
+                        <button><a class="btn color " href="{{ path('agence_new') }}">créer une nouvelle agence</a>
+                        </button>
                     </li>
                 </ul>
 
-                <form method="POST" style="padding-bottom: 2%;padding-top: 2%;padding-left: 1.7%">
-                    <h3>Rechercher : <input  placeholder="Matricule" type="text" name="matricule">
-                        <input  type="submit" value="Recherche"></h3>
-                </form>
+                <br>
+                {% set agen = 0 %}
 
                 {% for agence in agences %}
-                    <div id="offre">
+                    {% set agen = agen + 1 %}
+                {% endfor %}
+                {% if agen==1 %}
+                        <div align="center" class="image fix"><img
+                                    src="{{ asset('bundles/limitlesskarhabti/img/testimonial/1.jpg') }}"
+                                    alt=""/><br>
+                        </div><br>
 
-                        <div class="col-md-4" >
+                    <div id="testimonial-area"
+                         class=" text-center">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-8 col-md-offset-2 col-xs-12">
+                                    <!-- Testimonial Image Slider -->
+                                    <div class="ti-slider mb-40">
 
-                            <div class="thumbnail" align="center" style="background-color: ghostwhite">
-
-                                <h1 style="color: #efe24b"><a style="text-transform: uppercase;" href="{{ path('agence_show', { 'id': agence.id }) }}"> <b>{{ agence.nom }}</b></a><br></h1>
-
-                                <label>Nom agence : </label>{{ agence.nom }} <br>
-                                <label>Adresse :</label> {{ agence.adresse }} <br>
-                                <label>Ville :</label> {{ agence.ville }}<br>
-
-
-
-
-
-
-                                <button style="margin-bottom: 2%;margin-top: 2%" >
-                                    <a  class="btn color " href="{{ path('agence_show', { 'id': agence.id }) }}">Voir les details de l'agence</a>
-                                </button>
+                                    </div>
+                                    <!-- Testimonial Content Slider -->
+                                    <div class="tc-slider">
+                                        {% for agence in agences %}
+                                            <div class="single-slide">
+                                                <p>Cette agence est située à {{ agence.ville }}, {{ agence.adresse }}.
+                                                    Elle
+                                                    ouvre
+                                                    "{{ agence.ouverture }}",
+                                                    et elle ferme "{{ agence.fermeture }}", son num
+                                                    fiscale {{ agence.numFiscal }}
+                                                    .</p>
+                                                <h5>{{ agence.nom }}</h5>
+                                                <span>(+216) {{ agence.telephone }}</span>
+                                            </div>
+                                        {% endfor %}
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                {% endfor %}
+                {% else %}
+                    <div id="testimonial-area" class=" text-center ">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-8 col-md-offset-2 col-xs-12">
+                                    <!-- Testimonial Image Slider -->
+                                    <div class="ti-slider mb-40">
+                                        {% for agence in agences %}
+                                            <div class="single-slide">
+                                                <div class="image fix"><img
+                                                            src="{{ asset('bundles/limitlesskarhabti/img/testimonial/1.jpg') }}"
+                                                            alt=""/></div>
+                                            </div>
+                                        {% endfor %}
+                                    </div>
+                                    <!-- Testimonial Content Slider -->
+                                    <div class="tc-slider">
+                                        {% for agence in agences %}
+                                            <div class="single-slide">
+                                                <p>Cette agence est située à {{ agence.ville }}, {{ agence.adresse }}.
+                                                    Elle
+                                                    ouvre
+                                                    "{{ agence.ouverture }}",
+                                                    et elle ferme "{{ agence.fermeture }}", son num
+                                                    fiscale {{ agence.numFiscal }}
+                                                    .</p>
+                                                <h5>{{ agence.nom }}</h5>
+                                                <span>(+216) {{ agence.telephone }}</span>
+                                            </div>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
+
 
             </div>
 
