--- a/src/Limitless/KarhabtiBundle/Resources/views/Offre/affiche.html.twig
+++ b/src/Limitless/KarhabtiBundle/Resources/views/Offre/affiche.html.twig
@@ -6,7 +6,6 @@
     {% set counter = 0 %}
     <!-- Header 1
  ============================================ -->
-    <div class="header-area header-absolute header-transparent">
         <div class="header-bottom-2 sticky">
             <div class="container">
                 <div class="row">
@@ -21,23 +20,25 @@
                             <nav>
                                 <ul>
                                     <li><a href="{{ path('limitless_karhabti_homepage') }}">home</a></li>
-                                    <li><a href="#">Profil</a></li>
+                                    <li ><a href="{{ path('agence_index') }}">Profil</a></li>
                                     <li class="active"><a href="#">Offre/Pack<i class="icofont icofont-simple-down"></i></a>
                                         <ul>
                                             <li><a href="{{ path('responsable_offre_index') }}">Offre</a></li>
+                                            <li><a href="{{ path('limitless_karhabti_responsable_reservationoffre') }}">Réservation Offre</a></li>
                                             <li><a href="{{ path('responsable_pack_index') }}">Pack</a></li>
+                                            <li><a href="{{ path('limitless_karhabti_responsable_reservationpack') }}">Réservation Pack</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="{{ path('responsable_vehicule_index') }}">Vehicule</a></li>
-                                    <li><a href="#">Moniteur</a></li>
+                                    <li ><a href="{{ path('responsable_vehicule_index') }}">Vehicule</a></li>
+                                    <li ><a href="{{ path('moniteur_reponsable_index') }}">Moniteur</a></li>
                                     <li><a href="{{ path('reponsable_tache_index') }}">Planning</a></li>
                                     <li><a href="#">Cour/Examen<i class="icofont icofont-simple-down"></i></a>
                                         <ul>
-                                            <li><a href="#">Cour</a></li>
-                                            <li><a href="#">Examen</a></li>
+                                            <li ><a href="{{ path('responsable_cours_List') }}">Cour</a></li>
+                                            <li ><a href="{{ path('responsable_examen_Liste') }}">Examen</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="#">contact</a></li>
+                                    <li ><a href="{{ path('limitless_karhabti_mail') }}">contact</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -84,123 +85,6 @@
                         display: inline-block;
                         width: auto;
                         line-height: 30px;
-                    }
-
-                    table a:link {
-                        color: #666;
-                        font-weight: bold;
-                        text-decoration: none;
-                    }
-
-                    table a:visited {
-                        color: #999999;
-                        font-weight: bold;
-                        text-decoration: none;
-                    }
-
-                    table a:active,
-                    table a:hover {
-                        color: #bd5a35;
-                        text-decoration: underline;
-                    }
-
-                    table {
-                        font-family: Arial, Helvetica, sans-serif;
-                        color: #666;
-                        font-size: 12px;
-                        text-shadow: 1px 1px 0px #fff;
-                        background: #eaebec;
-                        margin-left: auto;
-                        margin-right: auto;
-                        margin-top: 20px;
-                        width: auto;
-                        border: #ccc 1px solid;
-
-                        -moz-border-radius: 3px;
-                        -webkit-border-radius: 3px;
-                        border-radius: 3px;
-
-                        -moz-box-shadow: 0 1px 2px #d1d1d1;
-                        -webkit-box-shadow: 0 1px 2px #d1d1d1;
-                        box-shadow: 0 1px 2px #d1d1d1;
-                    }
-
-                    table th {
-                        padding: 21px 25px 22px 25px;
-                        border-top: 1px solid #fafafa;
-                        border-bottom: 1px solid #e0e0e0;
-                        text-align: center;
-
-                        background: #ededed;
-                        background: -webkit-gradient(linear, left top, left bottom, from(#ededed), to(#ebebeb));
-                        background: -moz-linear-gradient(top, #ededed, #ebebeb);
-                    }
-
-                    table th:first-child {
-                        text-align: center;
-                        padding-left: 20px;
-                    }
-
-                    table tr:first-child th:first-child {
-                        -moz-border-radius-topleft: 3px;
-                        -webkit-border-top-left-radius: 3px;
-                        border-top-left-radius: 3px;
-                    }
-
-                    table tr:first-child th:last-child {
-                        -moz-border-radius-topright: 3px;
-                        -webkit-border-top-right-radius: 3px;
-                        border-top-right-radius: 3px;
-                    }
-
-                    table tr {
-                        text-align: center;
-                        padding-left: 20px;
-                    }
-
-                    table tr td:first-child {
-                        text-align: left;
-                        padding-left: 20px;
-                        border-left: 0;
-                    }
-
-                    table tr td {
-                        padding: 18px;
-                        border-top: 1px solid #ffffff;
-                        border-bottom: 1px solid #e0e0e0;
-                        border-left: 1px solid #e0e0e0;
-
-                        background: #fafafa;
-                        background: -webkit-gradient(linear, left top, left bottom, from(#fbfbfb), to(#fafafa));
-                        background: -moz-linear-gradient(top, #fbfbfb, #fafafa);
-                    }
-
-                    table tr.even td {
-                        background: #f6f6f6;
-                        background: -webkit-gradient(linear, left top, left bottom, from(#f8f8f8), to(#f6f6f6));
-                        background: -moz-linear-gradient(top, #f8f8f8, #f6f6f6);
-                    }
-
-                    table tr:last-child td {
-                        border-bottom: 0;
-                    }
-
-                    table tr:last-child td:first-child {
-                        -moz-border-radius-bottomleft: 3px;
-                        -webkit-border-bottom-left-radius: 3px;
-                        border-bottom-left-radius: 3px;
-                    }
-
-                    table tr:last-child td:last-child {
-                        -moz-border-radius-bottomright: 3px;
-                        -webkit-border-bottom-right-radius: 3px;
-                        border-bottom-right-radius: 3px;
-                    }
-
-                    table tr:hover td {
-                        background: #f2f2f2;
-                        background: -webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#f0f0f0));
-                        background: -moz-linear-gradient(top, #f2f2f2, #f0f0f0);
                     }
 
                 </style>
