--- a/src/Limitless/KarhabtiBundle/Resources/views/agence/index.html.twig
+++ b/src/Limitless/KarhabtiBundle/Resources/views/agence/index.html.twig
@@ -6,7 +6,6 @@
 
     <!-- Header 1
  ============================================ -->
-    <div class="header-area header-absolute header-transparent">
         <div class="header-bottom-2 sticky">
             <div class="container">
                 <div class="row">
@@ -21,16 +20,18 @@
                             <nav>
                                 <ul>
                                     <li><a href="{{ path('limitless_karhabti_homepage') }}">home</a></li>
-                                    <li><a href="#">Profil</a></li>
+                                    <li class="active"><a href="{{ path('agence_index') }}">Profil</a></li>
                                     <li><a href="#">Offre/Pack<i class="icofont icofont-simple-down"></i></a>
                                         <ul>
                                             <li><a href="{{ path('responsable_offre_index') }}">Offre</a></li>
+                                            <li><a href="{{ path('limitless_karhabti_responsable_reservationoffre') }}">Réservation Offre</a></li>
                                             <li><a href="{{ path('responsable_pack_index') }}">Pack</a></li>
+                                            <li><a href="{{ path('limitless_karhabti_responsable_reservationpack') }}">Réservation Pack</a></li>
                                         </ul>
                                     </li>
-                                    <li class="active"><a href="{{ path('responsable_vehicule_index') }}">Vehicule</a>
+                                    <li ><a href="{{ path('responsable_vehicule_index') }}">Vehicule</a>
                                     </li>
-                                    <li><a href="#">Moniteur</a></li>
+                                    <li><a href="{{ path('moniteur_reponsable_index') }}">Moniteur</a></li>
                                     <li><a href="{{ path('reponsable_tache_index') }}">Planning</a></li>
                                     <li><a href="#">Cour/Examen<i class="icofont icofont-simple-down"></i></a>
                                         <ul>
@@ -102,10 +103,14 @@
                     {% set agen = agen + 1 %}
                 {% endfor %}
                 {% if agen==1 %}
-                        <div align="center" class="image fix"><img
-                                    src="{{ asset('bundles/limitlesskarhabti/img/testimonial/1.jpg') }}"
-                                    alt=""/><br>
-                        </div><br>
+                    <div align="center" class="image fix">
+                    {% for agence in agences %}
+                        <img
+
+                                src="{{ asset('bundles/limitlesskarhabti/Image/Agence/'~agence.nom~'/'~agence.nom~'.jpg') }}"
+                                alt=""/><br>
+                        {% endfor %}
+                    </div><br>
 
                     <div id="testimonial-area"
                          class=" text-center">
@@ -146,8 +151,12 @@
                                         {% for agence in agences %}
                                             <div class="single-slide">
                                                 <div class="image fix"><img
-                                                            src="{{ asset('bundles/limitlesskarhabti/img/testimonial/1.jpg') }}"
-                                                            alt=""/></div>
+                                                            src="{{ asset('bundles/limitlesskarhabti/Image/Agence/'~agence.nom~'/'~agence.nom~'.jpg') }}"
+                                                            alt=""
+                                                    width="100"
+                                                            height="100"
+                                                            style="margin-top: 100%;margin-bottom: 100%;margin-left: 100%;margin-right: 100%;margin: auto"
+                                                    /></div>
                                             </div>
                                         {% endfor %}
                                     </div>
